@@ -1,23 +1,18 @@
 package org.vivecraft.client_vr.provider;
 
 import net.minecraft.client.KeyMapping;
-import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.screens.ChatScreen;
-import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.client.gui.screens.WinScreen;
 import net.minecraft.client.gui.screens.inventory.AbstractContainerScreen;
 import net.minecraft.network.chat.Component;
-import net.minecraft.util.Mth;
+import net.minecraft.world.entity.player.Inventory;
 import net.minecraft.world.item.BlockItem;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.block.TorchBlock;
 import net.minecraft.world.phys.Vec3;
-import org.joml.Vector2f;
-import org.lwjgl.glfw.GLFW;
+import org.joml.*;
 import org.vivecraft.client.VivecraftVRMod;
-import org.vivecraft.client.utils.Utils;
-import org.vivecraft.client_vr.ClientDataHolderVR;
-import org.vivecraft.client_vr.VRData;
+import org.vivecraft.client_vr.VRData.VRDevicePose;
 import org.vivecraft.client_vr.Vec3History;
 import org.vivecraft.client_vr.extensions.GuiExtension;
 import org.vivecraft.client_vr.gameplay.screenhandlers.GuiHandler;
@@ -29,52 +24,62 @@ import org.vivecraft.client_vr.provider.openvr_lwjgl.control.VivecraftMovementIn
 import org.vivecraft.client_vr.render.RenderConfigException;
 import org.vivecraft.client_vr.render.RenderPass;
 import org.vivecraft.client_vr.settings.VRHotkeys;
-import org.vivecraft.client_vr.settings.VRSettings;
+import org.vivecraft.client_vr.settings.VRHotkeys.Triggerer;
+import org.vivecraft.client_vr.settings.VRSettings.HUDLock;
+import org.vivecraft.client_vr.settings.VRSettings.MirrorMode;
 import org.vivecraft.client_xr.render_pass.RenderPassManager;
-import org.vivecraft.common.utils.lwjgl.Matrix4f;
-import org.vivecraft.common.utils.lwjgl.Vector3f;
-import org.vivecraft.common.utils.math.Quaternion;
-import org.vivecraft.common.utils.math.Vector3;
 import org.vivecraft.mod_compat_vr.ShadersHelper;
 
+import javax.annotation.Nullable;
+import javax.annotation.ParametersAreNonnullByDefault;
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileReader;
 import java.io.IOException;
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static org.joml.Math.*;
+import static org.lwjgl.glfw.GLFW.GLFW_KEY_ESCAPE;
+import static org.lwjgl.glfw.GLFW.glfwSetCursorPos;
+import static org.vivecraft.client.utils.Utils.message;
+import static org.vivecraft.client_vr.VRState.dh;
+import static org.vivecraft.client_vr.VRState.mc;
+import static org.vivecraft.common.utils.Utils.*;
+
+@ParametersAreNonnullByDefault
 public abstract class MCVR {
-    protected Minecraft mc;
-    protected ClientDataHolderVR dh;
     protected static MCVR me;
-    protected static VivecraftVRMod mod;
-    protected org.vivecraft.common.utils.math.Matrix4f hmdPose = new org.vivecraft.common.utils.math.Matrix4f();
-    public org.vivecraft.common.utils.math.Matrix4f hmdRotation = new org.vivecraft.common.utils.math.Matrix4f();
+    protected Matrix4f hmdPose = new Matrix4f();
+    public Matrix4f hmdRotation = new Matrix4f();
     public HardwareType detectedHardware = HardwareType.VIVE;
-    protected org.vivecraft.common.utils.math.Matrix4f hmdPoseLeftEye = new org.vivecraft.common.utils.math.Matrix4f();
-    protected org.vivecraft.common.utils.math.Matrix4f hmdPoseRightEye = new org.vivecraft.common.utils.math.Matrix4f();
+    protected Matrix4f hmdPoseLeftEye = new Matrix4f();
+    protected Matrix4f hmdPoseRightEye = new Matrix4f();
     public Vec3History hmdHistory = new Vec3History();
     public Vec3History hmdPivotHistory = new Vec3History();
     protected boolean headIsTracking;
-    protected org.vivecraft.common.utils.math.Matrix4f[] controllerPose = new org.vivecraft.common.utils.math.Matrix4f[3];
-    protected org.vivecraft.common.utils.math.Matrix4f[] controllerRotation = new org.vivecraft.common.utils.math.Matrix4f[3];
-    protected boolean[] controllerTracking = new boolean[3];
-    protected org.vivecraft.common.utils.math.Matrix4f[] handRotation = new org.vivecraft.common.utils.math.Matrix4f[3];
+    protected Matrix4f[] controllerPose = new Matrix4f[]{new Matrix4f(), new Matrix4f()};
+    protected Matrix4f[] controllerRotation = new Matrix4f[]{new Matrix4f(), new Matrix4f()};
+    protected boolean[] controllerTracking = new boolean[]{false, false};
+    protected int[] controllerSkeletalInputTrackingLevel = {0, 0};
+    protected ArrayList<Float>[] gestureFingerSplay = new ArrayList[]{new ArrayList<Float>(), new ArrayList<Float>()};
+    protected ArrayList<Float>[] gestureFingerCurl = new ArrayList[]{new ArrayList<Float>(), new ArrayList<Float>()};
+    protected ArrayList<Vector4f>[] gestureFingerTransforms = new ArrayList[]{new ArrayList<Vector4f>(), new ArrayList<Vector4f>()};
+    protected ArrayList<Quaternionf>[] gestureFingerOrientations = new ArrayList[]{new ArrayList<Quaternionf>(), new ArrayList<Quaternionf>()};
+    protected Matrix4f[] gesturePose = new Matrix4f[2];
+    protected Matrix4f[] gestureRotation = new Matrix4f[2];
+    protected Vector3d[] gestureVelocity = new Vector3d[2];
+    protected Matrix4f[] handRotation = new Matrix4f[]{new Matrix4f(), new Matrix4f()};
     public Vec3History[] controllerHistory = new Vec3History[]{new Vec3History(), new Vec3History()};
     public Vec3History[] controllerForwardHistory = new Vec3History[]{new Vec3History(), new Vec3History()};
     public Vec3History[] controllerUpHistory = new Vec3History[]{new Vec3History(), new Vec3History()};
-    protected double gunAngle = 0.0D;
+    protected float gunAngle = 0.0F;
     protected boolean gunStyle;
     public boolean initialized;
     public String initStatus;
     public boolean initSuccess;
-    protected org.vivecraft.common.utils.math.Matrix4f[] poseMatrices;
-    protected Vec3[] deviceVelocity;
-    protected Vec3[] aimSource = new Vec3[3];
-    public Vector3 forward = new Vector3(0.0F, 0.0F, -1.0F);
-    public Vector3 up = new Vector3(0.0F, 1.0F, 0.0F);
+    protected Matrix4f[] poseMatrices;
+    protected Vector3f[] aimSource = new Vector3f[]{new Vector3f(), new Vector3f()};
     public int hmdAvgLength = 90;
     public LinkedList<Vec3> hmdPosSamples = new LinkedList<>();
     public LinkedList<Float> hmdYawSamples = new LinkedList<>();
@@ -89,10 +94,6 @@ public abstract class MCVR {
     protected HapticScheduler hapticScheduler;
     public float seatedRot;
     public float aimPitch = 0.0F;
-    protected final org.vivecraft.common.utils.math.Matrix4f Neutral_HMD = new org.vivecraft.common.utils.math.Matrix4f(1.0F, 0.0F, 0.0F, 0.0F, 0.0F, 1.0F, 0.0F, 1.62F, 0.0F, 0.0F, 1.0F, 0.0F, 0.0F, 0.0F, 0.0F, 1.0F);
-    protected final org.vivecraft.common.utils.math.Matrix4f TPose_Left = new org.vivecraft.common.utils.math.Matrix4f(1.0F, 0.0F, 0.0F, 0.25F, 0.0F, 1.0F, 0.0F, 1.62F, 0.0F, 0.0F, 1.0F, 0.25F, 0.0F, 0.0F, 0.0F, 1.0F);
-    protected final org.vivecraft.common.utils.math.Matrix4f TPose_Right = new org.vivecraft.common.utils.math.Matrix4f(1.0F, 0.0F, 0.0F, 0.75F, 0.0F, 1.0F, 0.0F, 1.62F, 0.0F, 0.0F, 1.0F, 0.75F, 0.0F, 0.0F, 0.0F, 1.0F);
-    protected boolean TPose = false;
     public boolean hudPopup = true;
     protected int moveModeSwitchCount = 0;
     public boolean isWalkingAbout;
@@ -102,27 +103,8 @@ public abstract class MCVR {
     protected float walkaboutYawStart;
     protected float hmdForwardYaw = 180;
     public boolean ignorePressesNextFrame = false;
-    protected int quickTorchPreviousSlot;
     protected Map<String, VRInputAction> inputActions = new HashMap<>();
     protected Map<String, VRInputAction> inputActionsByKeyBinding = new HashMap<>();
-
-    public MCVR(Minecraft mc, ClientDataHolderVR dh, VivecraftVRMod vrMod) {
-        this.mc = mc;
-        this.dh = dh;
-        mod = vrMod;
-        me = this;
-
-        for (int i = 0; i < 3; ++i) {
-            this.aimSource[i] = new Vec3(0.0D, 0.0D, 0.0D);
-            this.controllerPose[i] = new org.vivecraft.common.utils.math.Matrix4f();
-            this.controllerRotation[i] = new org.vivecraft.common.utils.math.Matrix4f();
-            this.handRotation[i] = new org.vivecraft.common.utils.math.Matrix4f();
-        }
-    }
-
-    public static MCVR get() {
-        return me;
-    }
 
     public abstract String getName();
 
@@ -132,29 +114,41 @@ public abstract class MCVR {
 
     public abstract void destroy();
 
-    public double getGunAngle() {
+    public float getGunAngle() {
         return this.gunAngle;
     }
 
-    public org.vivecraft.common.utils.math.Matrix4f getAimRotation(int controller) {
+    public Matrix4f getAimRotation(int controller) {
         return this.controllerRotation[controller];
     }
 
     public Vec3 getAimSource(int controller) {
-        Vec3 vec3 = new Vec3(this.aimSource[controller].x, this.aimSource[controller].y, this.aimSource[controller].z);
-
-        if (!this.dh.vrSettings.seated && this.dh.vrSettings.allowStandingOriginOffset) {
-            if (this.dh.vr.isHMDTracking()) {
-                vec3 = vec3.add((double) this.dh.vrSettings.originOffset.getX(), (double) this.dh.vrSettings.originOffset.getY(), (double) this.dh.vrSettings.originOffset.getZ());
-            }
-        }
-
-        return vec3;
+        return convertToVec3(
+            !dh.vrSettings.seated && dh.vrSettings.allowStandingOriginOffset && dh.vr.isHMDTracking() ?
+            this.aimSource[controller].add(dh.vrSettings.originOffset, new Vector3f()) :
+            this.aimSource[controller]
+        );
     }
 
     public Vec3 getAimVector(int controller) {
-        Vector3 vector3 = this.controllerRotation[controller].transform(this.forward);
-        return vector3.toVector3d();
+        return convertToVec3(this.controllerRotation[controller].transformProject(forward, new Vector3f()));
+    }
+
+    public Vector3f getGesturePosition(int controller) {
+        Vector3f vector3_position = this.gesturePose[controller].getTranslation(new Vector3f());
+        return new Vector3f(vector3_position.x, vector3_position.y, vector3_position.z);
+    }
+
+    public Vector3f getGestureVector(int controller) {
+        return this.gesturePose[controller].transformPosition(new Vector3f(up));
+    }
+
+    public ArrayList<Vector4f> getGestureFingerTransforms(int controller) {
+        return this.gestureFingerTransforms[controller];
+    }
+
+    public ArrayList<Quaternionf> getGestureFingerOrientations(int controller) {
+        return this.gestureFingerOrientations[controller];
     }
 
     public void triggerHapticPulse(ControllerType controller, float durationSeconds, float frequency, float amplitude) {
@@ -162,8 +156,8 @@ public abstract class MCVR {
     }
 
     public void triggerHapticPulse(ControllerType controller, float durationSeconds, float frequency, float amplitude, float delaySeconds) {
-        if (!this.dh.vrSettings.seated) {
-            if (this.dh.vrSettings.reverseHands) {
+        if (!dh.vrSettings.seated) {
+            if (dh.vrSettings.reverseHands) {
                 if (controller == ControllerType.RIGHT) {
                     controller = ControllerType.LEFT;
                 } else {
@@ -189,107 +183,63 @@ public abstract class MCVR {
         }
     }
 
-    public org.vivecraft.common.utils.math.Matrix4f getHandRotation(int controller) {
+    public Matrix4f getHandRotation(int controller) {
         return this.handRotation[controller];
     }
 
     public Vec3 getHandVector(int controller) {
-        Vector3 vector3 = new Vector3(0.0F, 0.0F, -1.0F);
-        org.vivecraft.common.utils.math.Matrix4f matrix4f = this.handRotation[controller];
-        Vector3 vector31 = matrix4f.transform(vector3);
-        return vector31.toVector3d();
+        return convertToVec3(this.handRotation[controller].transformProject(forward, new Vector3f()));
     }
 
-    public Vec3 getCenterEyePosition() {
-        Vector3 vector3 = Utils.convertMatrix4ftoTranslationVector(this.hmdPose);
-
-        if (this.dh.vrSettings.seated || this.dh.vrSettings.allowStandingOriginOffset) {
-            if (this.dh.vr.isHMDTracking()) {
-                vector3 = vector3.add(this.dh.vrSettings.originOffset);
-            }
-        }
-
-        return vector3.toVector3d();
+    public Vector3f getCenterEyePosition() {
+        return (
+            ((dh.vrSettings.seated || dh.vrSettings.allowStandingOriginOffset) && dh.vr.isHMDTracking()) ?
+            this.hmdPose.getTranslation(new Vector3f()).add(dh.vrSettings.originOffset) :
+            this.hmdPose.getTranslation(new Vector3f())
+        );
     }
 
     public Vec3 getEyePosition(RenderPass eye) {
-        org.vivecraft.common.utils.math.Matrix4f matrix4f = this.hmdPoseRightEye;
-
-        if (eye == RenderPass.LEFT) {
-            matrix4f = this.hmdPoseLeftEye;
-        } else if (eye == RenderPass.RIGHT) {
-            matrix4f = this.hmdPoseRightEye;
-        } else {
-            matrix4f = null;
-        }
-
-        if (matrix4f == null) {
-            org.vivecraft.common.utils.math.Matrix4f matrix4f2 = this.hmdPose;
-            Vector3 vector31 = Utils.convertMatrix4ftoTranslationVector(matrix4f2);
-
-            if (this.dh.vrSettings.seated || this.dh.vrSettings.allowStandingOriginOffset) {
-                if (this.dh.vr.isHMDTracking()) {
-                    vector31 = vector31.add(this.dh.vrSettings.originOffset);
-                }
+        Vector3f vector3 = switch(eye){
+            case LEFT -> {
+                yield this.hmdPose.mul0(this.hmdPoseLeftEye, new Matrix4f()).getTranslation(new Vector3f());
+            }
+            case RIGHT -> {
+                yield this.hmdPose.mul0(this.hmdPoseRightEye, new Matrix4f()).getTranslation(new Vector3f());
+            }
+            default -> {
+                yield this.hmdPose.getTranslation(new Vector3f());
             }
 
-            return vector31.toVector3d();
-        } else {
-            org.vivecraft.common.utils.math.Matrix4f matrix4f1 = org.vivecraft.common.utils.math.Matrix4f.multiply(this.hmdPose, matrix4f);
-            Vector3 vector3 = Utils.convertMatrix4ftoTranslationVector(matrix4f1);
+        };
 
-            if (this.dh.vrSettings.seated || this.dh.vrSettings.allowStandingOriginOffset) {
-                if (this.dh.vr.isHMDTracking()) {
-                    vector3 = vector3.add(this.dh.vrSettings.originOffset);
-                }
+        if (dh.vrSettings.seated || dh.vrSettings.allowStandingOriginOffset) {
+            if (dh.vr.isHMDTracking()) {
+                vector3.add(dh.vrSettings.originOffset);
             }
-
-            return vector3.toVector3d();
         }
+
+        return convertToVec3(vector3);
     }
 
     public HardwareType getHardwareType() {
-        return this.dh.vrSettings.forceHardwareDetection > 0 ? HardwareType.values()[this.dh.vrSettings.forceHardwareDetection - 1] : this.detectedHardware;
+        return dh.vrSettings.forceHardwareDetection > 0 ? HardwareType.values()[dh.vrSettings.forceHardwareDetection - 1] : this.detectedHardware;
     }
 
-    public Vec3 getHmdVector() {
-        Vector3 vector3 = this.hmdRotation.transform(this.forward);
-        return vector3.toVector3d();
+    public Vector3f getHmdVector() {
+        return this.hmdRotation.transformProject(forward, new Vector3f());
     }
 
-    public org.vivecraft.common.utils.math.Matrix4f getEyeRotation(RenderPass eye) {
-        org.vivecraft.common.utils.math.Matrix4f matrix4f;
+    public Matrix4f getEyeRotation(RenderPass eye) {
+        Matrix4f matrix4f = new Matrix4f();
 
         if (eye == RenderPass.LEFT) {
-            matrix4f = this.hmdPoseLeftEye;
-        } else if (eye == RenderPass.RIGHT) {
-            matrix4f = this.hmdPoseRightEye;
+            matrix4f.set(this.hmdPoseLeftEye);
         } else {
-            matrix4f = null;
+            matrix4f.set(this.hmdPoseRightEye);
         }
 
-        if (matrix4f != null) {
-            org.vivecraft.common.utils.math.Matrix4f matrix4f1 = new org.vivecraft.common.utils.math.Matrix4f();
-            matrix4f1.M[0][0] = matrix4f.M[0][0];
-            matrix4f1.M[0][1] = matrix4f.M[0][1];
-            matrix4f1.M[0][2] = matrix4f.M[0][2];
-            matrix4f1.M[0][3] = 0.0F;
-            matrix4f1.M[1][0] = matrix4f.M[1][0];
-            matrix4f1.M[1][1] = matrix4f.M[1][1];
-            matrix4f1.M[1][2] = matrix4f.M[1][2];
-            matrix4f1.M[1][3] = 0.0F;
-            matrix4f1.M[2][0] = matrix4f.M[2][0];
-            matrix4f1.M[2][1] = matrix4f.M[2][1];
-            matrix4f1.M[2][2] = matrix4f.M[2][2];
-            matrix4f1.M[2][3] = 0.0F;
-            matrix4f1.M[3][0] = 0.0F;
-            matrix4f1.M[3][1] = 0.0F;
-            matrix4f1.M[3][2] = 0.0F;
-            matrix4f1.M[3][3] = 1.0F;
-            return org.vivecraft.common.utils.math.Matrix4f.multiply(this.hmdRotation, matrix4f1);
-        } else {
-            return this.hmdRotation;
-        }
+        return this.hmdRotation.mul0(new Matrix4f().set3x3(matrix4f), matrix4f);
     }
 
     public VRInputAction getInputAction(String keyBindingDesc) {
@@ -309,10 +259,7 @@ public abstract class MCVR {
     }
 
     public Collection<VRInputAction> getInputActionsInSet(VRInputActionSet set) {
-        return Collections.unmodifiableCollection(this.inputActions.values().stream().filter((action) ->
-        {
-            return action.actionSet == set;
-        }).collect(Collectors.toList()));
+        return this.inputActions.values().stream().filter((action) -> action.actionSet == set).toList();
     }
 
     public boolean isControllerTracking(ControllerType controller) {
@@ -323,13 +270,24 @@ public abstract class MCVR {
         return this.controllerTracking[controller];
     }
 
+    public int getControllerSkeletalTrackingLevel(int controller) {
+        return this.controllerSkeletalInputTrackingLevel[controller];
+    }
+
+    public ArrayList<Float>[] getGestureFingerSplay() {
+        return this.gestureFingerSplay;
+    }
+
+    public ArrayList<Float>[] getGestureFingerCurl() {
+        return this.gestureFingerCurl;
+    }
+
     public void resetPosition() {
-        Vec3 vec3 = this.getCenterEyePosition().scale(-1.0D).add((double) this.dh.vrSettings.originOffset.getX(), (double) this.dh.vrSettings.originOffset.getY(), (double) this.dh.vrSettings.originOffset.getZ());
-        this.dh.vrSettings.originOffset = new Vector3((float) vec3.x, (float) vec3.y + 1.62F, (float) vec3.z);
+        dh.vrSettings.originOffset.set(this.getCenterEyePosition().negate().add(dh.vrSettings.originOffset)).y += 1.62F;
     }
 
     public void clearOffset() {
-        this.dh.vrSettings.originOffset = new Vector3(0.0F, 0.0F, 0.0F);
+        dh.vrSettings.originOffset.zero();
     }
 
     public boolean isHMDTracking() {
@@ -337,8 +295,8 @@ public abstract class MCVR {
     }
 
     protected void processHotbar() {
-        int previousSlot = this.dh.interactTracker.hotbar;
-        this.dh.interactTracker.hotbar = -1;
+        int previousSlot = dh.interactTracker.hotbar;
+        dh.interactTracker.hotbar = -1;
         if (mc.player == null) {
             return;
         }
@@ -346,29 +304,25 @@ public abstract class MCVR {
             return;
         }
 
-        if (dh.climbTracker.isGrabbingLadder() &&
-            dh.climbTracker.isClaws(mc.player.getMainHandItem())) {
+        if (dh.climbTracker.isGrabbingLadder() && dh.climbTracker.isClaws(mc.player.getMainHandItem())) {
             return;
         }
-        if (!dh.interactTracker.isActive(mc.player)) {
+        if (!dh.interactTracker.isActive()) {
             return;
         }
 
         Vec3 main = this.getAimSource(0);
         Vec3 off = this.getAimSource(1);
-        Vec3 barStartos = null, barEndos = null;
+        Vec3 barStartos, barEndos;
 
-        int i = 1;
-        if (this.dh.vrSettings.reverseHands) {
-            i = -1;
-        }
+        int i = dh.vrSettings.reverseHands ? 0 : 1;
 
-        if (this.dh.vrSettings.vrHudLockMode == VRSettings.HUDLock.WRIST) {
-            barStartos = this.getAimRotation(1).transform(new Vector3((float) i * 0.02F, 0.05F, 0.26F)).toVector3d();
-            barEndos = this.getAimRotation(1).transform(new Vector3((float) i * 0.02F, 0.05F, 0.01F)).toVector3d();
-        } else if (this.dh.vrSettings.vrHudLockMode == VRSettings.HUDLock.HAND) {
-            barStartos = this.getAimRotation(1).transform(new Vector3((float) i * -0.18F, 0.08F, -0.01F)).toVector3d();
-            barEndos = this.getAimRotation(1).transform(new Vector3((float) i * 0.19F, 0.04F, -0.08F)).toVector3d();
+        if (dh.vrSettings.vrHudLockMode == HUDLock.WRIST) {
+            barStartos = convertToVec3(this.getAimRotation(1).transformProject((float) i * 0.02F, 0.05F, 0.26F, new Vector3f()));
+            barEndos = convertToVec3(this.getAimRotation(1).transformProject((float) i * 0.02F, 0.05F, 0.01F, new Vector3f()));
+        } else if (dh.vrSettings.vrHudLockMode == HUDLock.HAND) {
+            barStartos = convertToVec3(this.getAimRotation(1).transformProject((float) i * -0.18F, 0.08F, -0.01F, new Vector3f()));
+            barEndos = convertToVec3(this.getAimRotation(1).transformProject((float) i * 0.19F, 0.04F, -0.08F, new Vector3f()));
         } else {
             return; //how did u get here
         }
@@ -405,7 +359,7 @@ public abstract class MCVR {
             pos = 9 - pos;
         }
 
-        int box = (int) Math.floor(pos);
+        int box = (int) floor(pos);
 
         if (box > 8) {
             return;
@@ -426,10 +380,10 @@ public abstract class MCVR {
     }
 
     protected KeyMapping findKeyBinding(String name) {
-        return Stream.concat(Arrays.stream(this.mc.options.keyMappings), mod.getHiddenKeyBindings().stream()).filter((kb) ->
+        return Stream.concat(Arrays.stream(mc.options.keyMappings), VivecraftVRMod.hiddenKeyBindingSet.stream()).filter((kb) ->
         {
             return name.equals(kb.getName());
-        }).findFirst().orElse((KeyMapping) null);
+        }).findFirst().orElse(null);
     }
 
     protected void hmdSampling() {
@@ -441,36 +395,46 @@ public abstract class MCVR {
             this.hmdYawSamples.removeFirst();
         }
 
-        float f = this.dh.vrPlayer.vrdata_room_pre.hmd.getYaw();
+        float f = dh.vrPlayer.vrdata_room_pre.hmd.getYaw();
 
         if (f < 0.0F) {
             f += 360.0F;
         }
 
-        this.hmdYawTotal += Utils.angleDiff(f, this.hmdYawLast);
+        float f0 = abs(f - this.hmdYawLast) % 360.0F;
+        float f1 = f0 > 180.0F ? 360.0F - f0 : f0;
+        int i = (!(f - this.hmdYawLast >= 0.0F) || !(f - this.hmdYawLast <= 180.0F)) && (!(f - this.hmdYawLast <= -180.0F) || !(f - this.hmdYawLast >= -360.0F)) ? -1 : 1;
+        this.hmdYawTotal += f1 * (float) i;
         this.hmdYawLast = f;
 
-        if (Math.abs(Utils.angleNormalize(this.hmdYawTotal) - this.hmdYawLast) > 1.0F || this.hmdYawTotal > 100000.0F) {
-            this.hmdYawTotal = this.hmdYawLast;
-            System.out.println("HMD yaw desync/overflow corrected");
+        float angle = this.hmdYawTotal;
+        angle = angle % 360.0F;
+
+        if (angle < 0.0F) {
+            angle += 360.0F;
         }
 
-        this.hmdPosSamples.add(this.dh.vrPlayer.vrdata_room_pre.hmd.getPosition());
-        float f1 = 0.0F;
+        if (abs(angle - this.hmdYawLast) > 1.0F || this.hmdYawTotal > 100000.0F) {
+            this.hmdYawTotal = this.hmdYawLast;
+            logger.warn("HMD yaw desync/overflow corrected");
+        }
+
+        this.hmdPosSamples.add(dh.vrPlayer.vrdata_room_pre.hmd.getPosition());
+        float f2 = 0.0F;
 
         if (this.hmdYawSamples.size() > 0) {
-            for (float f2 : this.hmdYawSamples) {
-                f1 += f2;
+            for (float f3 : this.hmdYawSamples) {
+                f2 += f3;
             }
 
-            f1 /= (float) this.hmdYawSamples.size();
+            f2 /= (float) this.hmdYawSamples.size();
         }
 
-        if (Math.abs(this.hmdYawTotal - f1) > 20.0F) {
+        if (abs(this.hmdYawTotal - f2) > 20.0F) {
             this.trigger = true;
         }
 
-        if (Math.abs(this.hmdYawTotal - f1) < 1.0F) {
+        if (abs(this.hmdYawTotal - f2) < 1.0F) {
             this.trigger = false;
         }
 
@@ -483,283 +447,172 @@ public abstract class MCVR {
         RenderPassManager.setGUIRenderPass();
 
 
-        if (this.mc != null) {
-            this.hmdRotation.M[0][0] = this.hmdPose.M[0][0];
-            this.hmdRotation.M[0][1] = this.hmdPose.M[0][1];
-            this.hmdRotation.M[0][2] = this.hmdPose.M[0][2];
-            this.hmdRotation.M[0][3] = 0.0F;
-            this.hmdRotation.M[1][0] = this.hmdPose.M[1][0];
-            this.hmdRotation.M[1][1] = this.hmdPose.M[1][1];
-            this.hmdRotation.M[1][2] = this.hmdPose.M[1][2];
-            this.hmdRotation.M[1][3] = 0.0F;
-            this.hmdRotation.M[2][0] = this.hmdPose.M[2][0];
-            this.hmdRotation.M[2][1] = this.hmdPose.M[2][1];
-            this.hmdRotation.M[2][2] = this.hmdPose.M[2][2];
-            this.hmdRotation.M[2][3] = 0.0F;
-            this.hmdRotation.M[3][0] = 0.0F;
-            this.hmdRotation.M[3][1] = 0.0F;
-            this.hmdRotation.M[3][2] = 0.0F;
-            this.hmdRotation.M[3][3] = 1.0F;
-            Vec3 vec3 = this.getCenterEyePosition();
-            this.hmdHistory.add(vec3);
-            Vector3 vector3 = this.hmdRotation.transform(new Vector3(0.0F, -0.1F, 0.1F));
-            this.hmdPivotHistory.add(new Vec3((double) vector3.getX() + vec3.x, (double) vector3.getY() + vec3.y, (double) vector3.getZ() + vec3.z));
+        this.hmdRotation.identity();
+        this.hmdRotation.set3x3(this.hmdPose);
+        this.hmdPivotHistory.add(
+            this.hmdRotation.transformProject(0.0F, -0.1F, 0.1F, new Vector3f())
+                .add(this.hmdHistory.add(this.getCenterEyePosition()))
+        );
 
-            if (this.dh.vrSettings.seated) {
-                this.controllerPose[0] = this.hmdPose.inverted().inverted();
-                this.controllerPose[1] = this.hmdPose.inverted().inverted();
-            }
+        if (dh.vrSettings.seated) {
+            this.controllerPose[0] = this.hmdPose.invert(new Matrix4f()).invert(new Matrix4f());
+            this.controllerPose[1] = this.hmdPose.invert(new Matrix4f()).invert(new Matrix4f());
+        }
 
-            org.vivecraft.common.utils.math.Matrix4f[] amatrix4f = new org.vivecraft.common.utils.math.Matrix4f[]{new org.vivecraft.common.utils.math.Matrix4f(), new org.vivecraft.common.utils.math.Matrix4f()};
-            org.vivecraft.common.utils.math.Matrix4f[] amatrix4f1 = new org.vivecraft.common.utils.math.Matrix4f[]{new org.vivecraft.common.utils.math.Matrix4f(), new org.vivecraft.common.utils.math.Matrix4f()};
+        Matrix4f[] amatrix4f = new Matrix4f[]{new Matrix4f(), new Matrix4f()};
+        Matrix4f[] amatrix4f1 = new Matrix4f[]{new Matrix4f(), new Matrix4f()};
 
-            if (this.dh.vrSettings.seated) {
-                amatrix4f1[0] = this.controllerPose[0];
-            } else {
-                amatrix4f1[0] = org.vivecraft.common.utils.math.Matrix4f.multiply(this.controllerPose[0], this.getControllerComponentTransform(0, "handgrip"));
-            }
+        if (dh.vrSettings.seated) {
+            amatrix4f1[0].set(this.controllerPose[0]);
+        } else {
+            this.controllerPose[0].mul0(this.getControllerComponentTransform(0, "handgrip"), amatrix4f1[0]);
+        }
 
-            this.handRotation[0].M[0][0] = amatrix4f1[0].M[0][0];
-            this.handRotation[0].M[0][1] = amatrix4f1[0].M[0][1];
-            this.handRotation[0].M[0][2] = amatrix4f1[0].M[0][2];
-            this.handRotation[0].M[0][3] = 0.0F;
-            this.handRotation[0].M[1][0] = amatrix4f1[0].M[1][0];
-            this.handRotation[0].M[1][1] = amatrix4f1[0].M[1][1];
-            this.handRotation[0].M[1][2] = amatrix4f1[0].M[1][2];
-            this.handRotation[0].M[1][3] = 0.0F;
-            this.handRotation[0].M[2][0] = amatrix4f1[0].M[2][0];
-            this.handRotation[0].M[2][1] = amatrix4f1[0].M[2][1];
-            this.handRotation[0].M[2][2] = amatrix4f1[0].M[2][2];
-            this.handRotation[0].M[2][3] = 0.0F;
-            this.handRotation[0].M[3][0] = 0.0F;
-            this.handRotation[0].M[3][1] = 0.0F;
-            this.handRotation[0].M[3][2] = 0.0F;
-            this.handRotation[0].M[3][3] = 1.0F;
+        this.handRotation[0].identity();
+        this.handRotation[0].set3x3(amatrix4f1[0]);
 
-            if (this.dh.vrSettings.seated) {
-                amatrix4f[0] = this.controllerPose[0];
-            } else {
-                amatrix4f[0] = org.vivecraft.common.utils.math.Matrix4f.multiply(this.controllerPose[0], this.getControllerComponentTransform(0, "tip"));
-            }
+        if (dh.vrSettings.seated) {
+            amatrix4f[0].set(this.controllerPose[0]);
+        } else {
+            this.controllerPose[0].mul0(this.getControllerComponentTransform(0, "tip"), amatrix4f[0]);
+        }
 
-            Vector3 vector31 = Utils.convertMatrix4ftoTranslationVector(amatrix4f[0]);
-            this.aimSource[0] = vector31.toVector3d();
-            this.controllerHistory[0].add(this.getAimSource(0));
-            this.controllerRotation[0].M[0][0] = amatrix4f[0].M[0][0];
-            this.controllerRotation[0].M[0][1] = amatrix4f[0].M[0][1];
-            this.controllerRotation[0].M[0][2] = amatrix4f[0].M[0][2];
-            this.controllerRotation[0].M[0][3] = 0.0F;
-            this.controllerRotation[0].M[1][0] = amatrix4f[0].M[1][0];
-            this.controllerRotation[0].M[1][1] = amatrix4f[0].M[1][1];
-            this.controllerRotation[0].M[1][2] = amatrix4f[0].M[1][2];
-            this.controllerRotation[0].M[1][3] = 0.0F;
-            this.controllerRotation[0].M[2][0] = amatrix4f[0].M[2][0];
-            this.controllerRotation[0].M[2][1] = amatrix4f[0].M[2][1];
-            this.controllerRotation[0].M[2][2] = amatrix4f[0].M[2][2];
-            this.controllerRotation[0].M[2][3] = 0.0F;
-            this.controllerRotation[0].M[3][0] = 0.0F;
-            this.controllerRotation[0].M[3][1] = 0.0F;
-            this.controllerRotation[0].M[3][2] = 0.0F;
-            this.controllerRotation[0].M[3][3] = 1.0F;
-            Vec3 vec31 = this.getHmdVector();
+        amatrix4f[0].getTranslation(this.aimSource[0]);
+        this.controllerHistory[0].add(this.getAimSource(0));
+        this.controllerRotation[0].identity();
+        this.controllerRotation[0].set3x3(amatrix4f[0]);
 
-            if (this.dh.vrSettings.seated && this.mc.screen == null) {
-                Matrix4f matrix4f = new Matrix4f();
+        if (dh.vrSettings.seated && mc.screen == null) {
+            Matrix4f matrix4f = new Matrix4f();
+            if (mc.isWindowActive()) {
                 float f = 110.0F;
                 float f1 = 180.0F;
-                double d0 = this.mc.mouseHandler.xpos() / (double) this.mc.getWindow().getScreenWidth() * (double) f - (double) (f / 2.0F);
-                int i = this.mc.getWindow().getScreenHeight();
+                int i = mc.getWindow().getScreenHeight();
 
                 if (i % 2 != 0) {
                     --i;
                 }
+                double d0 = mc.mouseHandler.xpos() / (double) mc.getWindow().getScreenWidth() * f - (f / 2.0F);
+                double d3;
+                Vector3f vec31 = this.getHmdVector();
 
-                double d1 = -this.mc.mouseHandler.ypos() / (double) i * (double) f1 + (double) (f1 / 2.0F);
-                double d2 = -d1;
-
-                if (this.mc.isWindowActive()) {
-                    float f2 = this.dh.vrSettings.keyholeX;
-                    float f3 = 20.0F * this.dh.vrSettings.xSensitivity;
-                    int j = (int) ((double) (-f2 + f / 2.0F) * (double) this.mc.getWindow().getScreenWidth() / (double) f) + 1;
-                    int k = (int) ((double) (f2 + f / 2.0F) * (double) this.mc.getWindow().getScreenWidth() / (double) f) - 1;
-                    float f4 = ((float) Math.abs(d0) - f2) / (f / 2.0F - f2);
-                    double d3 = this.mc.mouseHandler.xpos();
-
-                    if (d0 < (double) (-f2)) {
-                        this.seatedRot += f3 * f4;
-                        this.seatedRot %= 360.0F;
-                        this.hmdForwardYaw = (float) Math.toDegrees(Math.atan2(vec31.x, vec31.z));
-                        d3 = (double) j;
-                        d0 = (double) (-f2);
-                    } else if (d0 > (double) f2) {
-                        this.seatedRot -= f3 * f4;
-                        this.seatedRot %= 360.0F;
-                        this.hmdForwardYaw = (float) Math.toDegrees(Math.atan2(vec31.x, vec31.z));
-                        d3 = (double) k;
-                        d0 = (double) f2;
-                    }
-
-                    double d4 = 0.5D * (double) this.dh.vrSettings.ySensitivity;
-                    d2 = (double) this.aimPitch + d1 * d4;
-                    d2 = Mth.clamp(d2, -89.9D, 89.9D);
-                    InputSimulator.setMousePos(d3, (double) (i / 2));
-                    GLFW.glfwSetCursorPos(this.mc.getWindow().getWindow(), d3, (double) (i / 2));
-                    matrix4f.rotate((float) Math.toRadians(-d2), new Vector3f(1.0F, 0.0F, 0.0F));
-                    matrix4f.rotate((float) Math.toRadians(-180.0D + d0 - (double) this.hmdForwardYaw), new Vector3f(0.0F, 1.0F, 0.0F));
+                if (d0 < (double) (-dh.vrSettings.keyholeX)) {
+                    this.seatedRot += 20.0F * dh.vrSettings.xSensitivity * (((float) abs(d0) - dh.vrSettings.keyholeX) / (f / 2.0F - dh.vrSettings.keyholeX));
+                    this.seatedRot %= 360.0F;
+                    this.hmdForwardYaw = (float) toDegrees(atan2(vec31.x, vec31.z));
+                    d3 = ((int) ((double) (-dh.vrSettings.keyholeX + f / 2.0F) * (double) mc.getWindow().getScreenWidth() / (double) f) + 1);
+                    d0 = -dh.vrSettings.keyholeX;
+                } else if (d0 > (double) dh.vrSettings.keyholeX) {
+                    this.seatedRot -= 20.0F * dh.vrSettings.xSensitivity * (((float) abs(d0) - dh.vrSettings.keyholeX) / (f / 2.0F - dh.vrSettings.keyholeX));
+                    this.seatedRot %= 360.0F;
+                    this.hmdForwardYaw = (float) toDegrees(atan2(vec31.x, vec31.z));
+                    d3 = ((int) ((double) (dh.vrSettings.keyholeX + f / 2.0F) * (double) mc.getWindow().getScreenWidth() / (double) f) - 1);
+                    d0 = dh.vrSettings.keyholeX;
+                } else {
+                    d3 = mc.mouseHandler.xpos();
                 }
 
-                this.controllerRotation[0].M[0][0] = matrix4f.m00;
-                this.controllerRotation[0].M[0][1] = matrix4f.m01;
-                this.controllerRotation[0].M[0][2] = matrix4f.m02;
-                this.controllerRotation[0].M[1][0] = matrix4f.m10;
-                this.controllerRotation[0].M[1][1] = matrix4f.m11;
-                this.controllerRotation[0].M[1][2] = matrix4f.m12;
-                this.controllerRotation[0].M[2][0] = matrix4f.m20;
-                this.controllerRotation[0].M[2][1] = matrix4f.m21;
-                this.controllerRotation[0].M[2][2] = matrix4f.m22;
-
-                this.handRotation[0].M[0][0] = matrix4f.m00;
-                this.handRotation[0].M[0][1] = matrix4f.m01;
-                this.handRotation[0].M[0][2] = matrix4f.m02;
-                this.handRotation[0].M[1][0] = matrix4f.m10;
-                this.handRotation[0].M[1][1] = matrix4f.m11;
-                this.handRotation[0].M[1][2] = matrix4f.m12;
-                this.handRotation[0].M[2][0] = matrix4f.m20;
-                this.handRotation[0].M[2][1] = matrix4f.m21;
-                this.handRotation[0].M[2][2] = matrix4f.m22;
+                InputSimulator.setMousePos(d3, i / 2.0D);
+                glfwSetCursorPos(mc.getWindow().getWindow(), d3, i / 2.0D);
+                matrix4f.rotateX((float) toRadians(-clamp(
+                    -89.9D, 89.9D, this.aimPitch + (-mc.mouseHandler.ypos() / i * f1 + (f1 / 2.0F)) * 0.5F * dh.vrSettings.ySensitivity
+                )));
+                matrix4f.rotateY((float) toRadians(-180.0D + d0 - (double) this.hmdForwardYaw));
             }
 
-            Vec3 vec32 = this.getAimVector(0);
-            this.aimPitch = (float) Math.toDegrees(Math.asin(vec32.y / vec32.length()));
-            this.controllerForwardHistory[0].add(vec32);
-            Vec3 vec33 = this.controllerRotation[0].transform(this.up).toVector3d();
-            this.controllerUpHistory[0].add(vec33);
+            this.controllerRotation[0].set3x3(matrix4f);
 
-            if (this.dh.vrSettings.seated) {
-                amatrix4f1[1] = this.controllerPose[1];
-            } else {
-                amatrix4f1[1] = org.vivecraft.common.utils.math.Matrix4f.multiply(this.controllerPose[1], this.getControllerComponentTransform(1, "handgrip"));
-            }
-
-            this.handRotation[1].M[0][0] = amatrix4f1[1].M[0][0];
-            this.handRotation[1].M[0][1] = amatrix4f1[1].M[0][1];
-            this.handRotation[1].M[0][2] = amatrix4f1[1].M[0][2];
-            this.handRotation[1].M[0][3] = 0.0F;
-            this.handRotation[1].M[1][0] = amatrix4f1[1].M[1][0];
-            this.handRotation[1].M[1][1] = amatrix4f1[1].M[1][1];
-            this.handRotation[1].M[1][2] = amatrix4f1[1].M[1][2];
-            this.handRotation[1].M[1][3] = 0.0F;
-            this.handRotation[1].M[2][0] = amatrix4f1[1].M[2][0];
-            this.handRotation[1].M[2][1] = amatrix4f1[1].M[2][1];
-            this.handRotation[1].M[2][2] = amatrix4f1[1].M[2][2];
-            this.handRotation[1].M[2][3] = 0.0F;
-            this.handRotation[1].M[3][0] = 0.0F;
-            this.handRotation[1].M[3][1] = 0.0F;
-            this.handRotation[1].M[3][2] = 0.0F;
-            this.handRotation[1].M[3][3] = 1.0F;
-
-            if (this.dh.vrSettings.seated) {
-                amatrix4f[1] = this.controllerPose[1];
-            } else {
-                amatrix4f[1] = org.vivecraft.common.utils.math.Matrix4f.multiply(this.controllerPose[1], this.getControllerComponentTransform(1, "tip"));
-            }
-
-            vector31 = Utils.convertMatrix4ftoTranslationVector(amatrix4f[1]);
-            this.aimSource[1] = vector31.toVector3d();
-            this.controllerHistory[1].add(this.getAimSource(1));
-            this.controllerRotation[1].M[0][0] = amatrix4f[1].M[0][0];
-            this.controllerRotation[1].M[0][1] = amatrix4f[1].M[0][1];
-            this.controllerRotation[1].M[0][2] = amatrix4f[1].M[0][2];
-            this.controllerRotation[1].M[0][3] = 0.0F;
-            this.controllerRotation[1].M[1][0] = amatrix4f[1].M[1][0];
-            this.controllerRotation[1].M[1][1] = amatrix4f[1].M[1][1];
-            this.controllerRotation[1].M[1][2] = amatrix4f[1].M[1][2];
-            this.controllerRotation[1].M[1][3] = 0.0F;
-            this.controllerRotation[1].M[2][0] = amatrix4f[1].M[2][0];
-            this.controllerRotation[1].M[2][1] = amatrix4f[1].M[2][1];
-            this.controllerRotation[1].M[2][2] = amatrix4f[1].M[2][2];
-            this.controllerRotation[1].M[2][3] = 0.0F;
-            this.controllerRotation[1].M[3][0] = 0.0F;
-            this.controllerRotation[1].M[3][1] = 0.0F;
-            this.controllerRotation[1].M[3][2] = 0.0F;
-            this.controllerRotation[1].M[3][3] = 1.0F;
-            vec31 = this.getAimVector(1);
-            this.controllerForwardHistory[1].add(vec31);
-            vec32 = this.controllerRotation[1].transform(this.up).toVector3d();
-            this.controllerUpHistory[1].add(vec32);
-
-            if (this.dh.vrSettings.seated) {
-                this.aimSource[1] = this.getCenterEyePosition();
-                this.aimSource[0] = this.getCenterEyePosition();
-            }
-
-            boolean flag = false;
-
-            if (flag) {
-                this.controllerPose[2] = this.controllerPose[0];
-            }
-
-            this.controllerRotation[2].M[0][0] = this.controllerPose[2].M[0][0];
-            this.controllerRotation[2].M[0][1] = this.controllerPose[2].M[0][1];
-            this.controllerRotation[2].M[0][2] = this.controllerPose[2].M[0][2];
-            this.controllerRotation[2].M[0][3] = 0.0F;
-            this.controllerRotation[2].M[1][0] = this.controllerPose[2].M[1][0];
-            this.controllerRotation[2].M[1][1] = this.controllerPose[2].M[1][1];
-            this.controllerRotation[2].M[1][2] = this.controllerPose[2].M[1][2];
-            this.controllerRotation[2].M[1][3] = 0.0F;
-            this.controllerRotation[2].M[2][0] = this.controllerPose[2].M[2][0];
-            this.controllerRotation[2].M[2][1] = this.controllerPose[2].M[2][1];
-            this.controllerRotation[2].M[2][2] = this.controllerPose[2].M[2][2];
-            this.controllerRotation[2].M[2][3] = 0.0F;
-            this.controllerRotation[2].M[3][0] = 0.0F;
-            this.controllerRotation[2].M[3][1] = 0.0F;
-            this.controllerRotation[2].M[3][2] = 0.0F;
-            this.controllerRotation[2].M[3][3] = 1.0F;
-
-            if ((!this.hasThirdController() || this.dh.vrSettings.displayMirrorMode != VRSettings.MirrorMode.MIXED_REALITY && this.dh.vrSettings.displayMirrorMode != VRSettings.MirrorMode.THIRD_PERSON) && !flag) {
-                this.mrMovingCamActive = false;
-                this.aimSource[2] = new Vec3((double) this.dh.vrSettings.vrFixedCamposX, (double) this.dh.vrSettings.vrFixedCamposY, (double) this.dh.vrSettings.vrFixedCamposZ);
-            } else {
-                this.mrMovingCamActive = true;
-                Vector3 vector32 = Utils.convertMatrix4ftoTranslationVector(this.controllerPose[2]);
-                this.aimSource[2] = vector32.toVector3d();
-            }
+            this.handRotation[0].set3x3(matrix4f);
         }
+
+        Vec3 vec32 = this.getAimVector(0);
+        this.aimPitch = (float) toDegrees(asin(vec32.y / vec32.length()));
+        this.controllerForwardHistory[0].add(vec32);
+        this.controllerUpHistory[0].add(this.controllerRotation[0].transformProject(up, new Vector3f()));
+
+        if (dh.vrSettings.seated) {
+            amatrix4f1[1].set(this.controllerPose[1]);
+        } else {
+            this.controllerPose[1].mul0(this.getControllerComponentTransform(1, "handgrip"), amatrix4f1[1]);
+        }
+
+        this.handRotation[1].identity();
+        this.handRotation[1].set3x3(amatrix4f1[1]);
+
+        if (dh.vrSettings.seated) {
+            amatrix4f[1].set(this.controllerPose[1]);
+        } else {
+            this.controllerPose[1].mul0(this.getControllerComponentTransform(1, "tip"), amatrix4f[1]);
+        }
+
+        amatrix4f[1].getTranslation(this.aimSource[1]);
+        this.controllerHistory[1].add(this.getAimSource(1));
+        this.controllerRotation[1].identity();
+        this.controllerRotation[1].set3x3(amatrix4f[1]);
+        this.controllerForwardHistory[1].add(this.getAimVector(1));
+        this.controllerUpHistory[1].add(this.controllerRotation[1].transformProject(up, new Vector3f()));
+
+        if (dh.vrSettings.seated) {
+            this.aimSource[1].set(this.getCenterEyePosition());
+            this.aimSource[0].set(this.getCenterEyePosition());
+        }
+
+//        boolean flag = false;
+//
+//        if (flag)
+//        {
+//            this.controllerPose[2] = this.controllerPose[0];
+//        }
+//
+//        this.controllerRotation[2].identity();
+//        this.controllerRotation[2].set3x3(this.controllerPose[2]);
+//
+//        if ((!this.hasThirdController() || dh.vrSettings.displayMirrorMode != MirrorMode.MIXED_REALITY && dh.vrSettings.displayMirrorMode != MirrorMode.THIRD_PERSON) && !flag)
+//        {
+//            this.mrMovingCamActive = false;
+//            this.aimSource[2] = new Vec3(dh.vrSettings.vrFixedCamposX, dh.vrSettings.vrFixedCamposY, dh.vrSettings.vrFixedCamposZ);
+//        }
+//        else
+//        {
+//            this.mrMovingCamActive = true;
+//            Vector3f vector32 = this.controllerPose[2].getTranslation(new Vector3f());
+//            this.aimSource[2] = convertToVec3(vector32);
+//        }
     }
 
     public void processBindings() {
         if (!this.inputActions.isEmpty()) {
-            boolean flag = this.mc.level != null && this.mc.player != null && this.mc.player.isSleeping();
-            boolean flag1 = this.mc.screen != null;
-            boolean flag2 = mod.keyToggleMovement.consumeClick();
+            boolean sleeping = mc.level != null && mc.player != null && mc.player.isSleeping();
+            boolean gui = mc.screen != null;
+            boolean toggleMovementPressed = VivecraftVRMod.keyToggleMovement.consumeClick();
 
-            if (!this.mc.options.keyPickItem.isDown() && !flag2) {
+            if (!mc.options.keyPickItem.isDown() && !toggleMovementPressed) {
                 this.moveModeSwitchCount = 0;
-            } else if (++this.moveModeSwitchCount == 80 || flag2) {
-                if (this.dh.vrSettings.seated) {
-                    this.dh.vrSettings.seatedFreeMove = !this.dh.vrSettings.seatedFreeMove;
-                    this.mc.gui.getChat().addMessage(Component.translatable("vivecraft.messages.movementmodeswitch", this.dh.vrSettings.seatedFreeMove ? Component.translatable("vivecraft.options.freemove") : Component.translatable("vivecraft.options.teleport")));
-                } else if (this.dh.vrPlayer.isTeleportSupported()) {
-                    this.dh.vrSettings.forceStandingFreeMove = !this.dh.vrSettings.forceStandingFreeMove;
-                    this.mc.gui.getChat().addMessage(Component.translatable("vivecraft.messages.movementmodeswitch", this.dh.vrSettings.seatedFreeMove ? Component.translatable("vivecraft.options.freemove") : Component.translatable("vivecraft.options.teleport")));
-                } else if (this.dh.vrPlayer.isTeleportOverridden()) {
-                    this.dh.vrPlayer.setTeleportOverride(false);
-                    this.mc.gui.getChat().addMessage(Component.translatable("vivecraft.messages.teleportdisabled"));
+            } else if (++this.moveModeSwitchCount == 80 || toggleMovementPressed) {
+                if (dh.vrSettings.seated) {
+                    dh.vrSettings.seatedFreeMove = !dh.vrSettings.seatedFreeMove;
+                    message(Component.translatable("vivecraft.messages.movementmodeswitch", dh.vrSettings.seatedFreeMove ? Component.translatable("vivecraft.options.freemove") : Component.translatable("vivecraft.options.teleport")));
+                } else if (dh.vrPlayer.isTeleportSupported()) {
+                    dh.vrSettings.forceStandingFreeMove = !dh.vrSettings.forceStandingFreeMove;
+                    message(Component.translatable("vivecraft.messages.movementmodeswitch", dh.vrSettings.seatedFreeMove ? Component.translatable("vivecraft.options.freemove") : Component.translatable("vivecraft.options.teleport")));
+                } else if (dh.vrPlayer.isTeleportOverridden()) {
+                    dh.vrPlayer.setTeleportOverride(false);
+                    message(Component.translatable("vivecraft.messages.teleportdisabled"));
                 } else {
-                    this.dh.vrPlayer.setTeleportOverride(true);
-                    this.mc.gui.getChat().addMessage(Component.translatable("vivecraft.messages.teleportenabled"));
+                    dh.vrPlayer.setTeleportOverride(true);
+                    message(Component.translatable("vivecraft.messages.teleportenabled"));
                 }
             }
 
             Vec3 vec3 = this.getAimVector(0);
             Vec3 vec31 = this.getAimVector(1);
-            float f = (float) Math.toDegrees(Math.atan2(-vec3.x, vec3.z));
-            float f1 = (float) Math.toDegrees(Math.atan2(-vec31.x, vec31.z));
+            float f = (float) toDegrees(atan2(-vec3.x, vec3.z));
+            float f1 = (float) toDegrees(atan2(-vec31.x, vec31.z));
 
-            if (!flag1) {
-                if (mod.keyWalkabout.isDown()) {
+            if (!gui) {
+                if (VivecraftVRMod.keyWalkabout.isDown()) {
                     float f2 = f;
-                    ControllerType controllertype = this.findActiveBindingControllerType(mod.keyWalkabout);
+                    ControllerType controllertype = this.findActiveBindingControllerType(VivecraftVRMod.keyWalkabout);
 
                     if (controllertype != null && controllertype == ControllerType.LEFT) {
                         f2 = f1;
@@ -767,98 +620,100 @@ public abstract class MCVR {
 
                     if (!this.isWalkingAbout) {
                         this.isWalkingAbout = true;
-                        this.walkaboutYawStart = this.dh.vrSettings.worldRotation - f2;
+                        this.walkaboutYawStart = dh.vrSettings.worldRotation - f2;
                     } else {
-                        this.dh.vrSettings.worldRotation = this.walkaboutYawStart + f2;
-                        this.dh.vrSettings.worldRotation %= 360.0F;
+                        dh.vrSettings.worldRotation = this.walkaboutYawStart + f2;
+                        dh.vrSettings.worldRotation %= 360.0F;
                     }
                 } else {
                     this.isWalkingAbout = false;
                 }
 
-                if (mod.keyRotateFree.isDown()) {
+                if (VivecraftVRMod.keyRotateFree.isDown()) {
                     float f3 = f;
-                    ControllerType controllertype5 = this.findActiveBindingControllerType(mod.keyRotateFree);
+                    //oh this is ugly. TODO: cache which hand when binding button.
+                    ControllerType controller = this.findActiveBindingControllerType(VivecraftVRMod.keyRotateFree);
 
-                    if (controllertype5 != null && controllertype5 == ControllerType.LEFT) {
+                    if (controller == ControllerType.LEFT) {
                         f3 = f1;
                     }
 
                     if (!this.isFreeRotate) {
                         this.isFreeRotate = true;
-                        this.walkaboutYawStart = this.dh.vrSettings.worldRotation + f3;
+                        this.walkaboutYawStart = dh.vrSettings.worldRotation + f3;
                     } else {
-                        this.dh.vrSettings.worldRotation = this.walkaboutYawStart - f3;
+                        dh.vrSettings.worldRotation = this.walkaboutYawStart - f3;
                     }
                 } else {
                     this.isFreeRotate = false;
                 }
             }
 
-            if (mod.keyHotbarNext.consumeClick()) {
+            if (VivecraftVRMod.keyHotbarNext.consumeClick()) {
                 this.changeHotbar(-1);
-                this.triggerBindingHapticPulse(mod.keyHotbarNext, 250);
+                this.triggerBindingHapticPulse(VivecraftVRMod.keyHotbarNext, 250);
             }
 
-            if (mod.keyHotbarPrev.consumeClick()) {
+            if (VivecraftVRMod.keyHotbarPrev.consumeClick()) {
                 this.changeHotbar(1);
-                this.triggerBindingHapticPulse(mod.keyHotbarPrev, 250);
+                this.triggerBindingHapticPulse(VivecraftVRMod.keyHotbarPrev, 250);
             }
 
-            if (mod.keyQuickTorch.consumeClick() && this.mc.player != null) {
-                for (int j = 0; j < 9; ++j) {
-                    ItemStack itemstack = this.mc.player.getInventory().getItem(j);
+            if (VivecraftVRMod.keyQuickTorch.consumeClick() && mc.player != null && mc.screen == null) {
+                Inventory inv = mc.player.getInventory();
+                for (byte torchSlot = 0; torchSlot < 9; ++torchSlot) {
+                    ItemStack itemstack = inv.getItem(torchSlot);
 
-                    if (itemstack.getItem() instanceof BlockItem && ((BlockItem) itemstack.getItem()).getBlock() instanceof TorchBlock && this.mc.screen == null) {
-                        this.quickTorchPreviousSlot = this.mc.player.getInventory().selected;
-                        this.mc.player.getInventory().selected = j;
-                        this.mc.startUseItem();
-                        this.mc.player.getInventory().selected = this.quickTorchPreviousSlot;
-                        this.quickTorchPreviousSlot = -1;
-                        break;
+                    if (itemstack.getItem() instanceof BlockItem && ((BlockItem) itemstack.getItem()).getBlock() instanceof TorchBlock) {
+                        int previous = inv.selected;
+                        inv.selected = torchSlot;
+                        mc.startUseItem();
+                        // switch back immediately
+                        inv.selected = previous;
+                        torchSlot = Byte.MAX_VALUE - 1;
                     }
                 }
             }
 
-            if (flag1 && !flag && this.mc.options.keyUp.isDown() && !(this.mc.screen instanceof WinScreen) && this.mc.player != null) {
-                this.mc.player.closeContainer();
+            if (gui && !sleeping && mc.options.keyUp.isDown() && !(mc.screen instanceof WinScreen) && mc.player != null) {
+                mc.player.closeContainer();
             }
 
-            if (this.mc.screen instanceof AbstractContainerScreen && this.mc.options.keyInventory.consumeClick() && this.mc.player != null) {
-                this.mc.player.closeContainer();
+            if (mc.screen instanceof AbstractContainerScreen && mc.options.keyInventory.consumeClick() && mc.player != null) {
+                mc.player.closeContainer();
             }
 
-            if (this.mc.screen instanceof ChatScreen && this.mc.options.keyChat.consumeClick()) {
-                this.mc.setScreen((Screen) null);
+            if (mc.screen instanceof ChatScreen && mc.options.keyChat.consumeClick()) {
+                mc.setScreen(null);
             }
 
-            if (this.dh.vrSettings.worldRotationIncrement == 0.0F) {
-                float f4 = this.getInputAction(mod.keyRotateAxis).getAxis2DUseTracked().getX();
+            if (dh.vrSettings.worldRotationIncrement == 0.0F) {
+                float f4 = this.getInputAction(VivecraftVRMod.keyRotateAxis).getAxis2DUseTracked().x();
 
                 if (f4 == 0.0F) {
-                    f4 = this.getInputAction(mod.keyFreeMoveRotate).getAxis2DUseTracked().getX();
+                    f4 = this.getInputAction(VivecraftVRMod.keyFreeMoveRotate).getAxis2DUseTracked().x();
                 }
 
                 if (f4 != 0.0F) {
                     float f8 = 10.0F * f4;
-                    this.dh.vrSettings.worldRotation -= f8;
-                    this.dh.vrSettings.worldRotation %= 360.0F;
+                    dh.vrSettings.worldRotation -= f8;
+                    dh.vrSettings.worldRotation %= 360.0F;
                 }
-            } else if (mod.keyRotateAxis.consumeClick() || mod.keyFreeMoveRotate.consumeClick()) {
-                float f5 = this.getInputAction(mod.keyRotateAxis).getAxis2D(false).getX();
+            } else if (VivecraftVRMod.keyRotateAxis.consumeClick() || VivecraftVRMod.keyFreeMoveRotate.consumeClick()) {
+                float f5 = this.getInputAction(VivecraftVRMod.keyRotateAxis).getAxis2D(false).x();
 
                 if (f5 == 0.0F) {
-                    f5 = this.getInputAction(mod.keyFreeMoveRotate).getAxis2D(false).getX();
+                    f5 = this.getInputAction(VivecraftVRMod.keyFreeMoveRotate).getAxis2D(false).x();
                 }
 
-                if (Math.abs(f5) > 0.5F) {
-                    this.dh.vrSettings.worldRotation -= this.dh.vrSettings.worldRotationIncrement * Math.signum(f5);
-                    this.dh.vrSettings.worldRotation %= 360.0F;
+                if (abs(f5) > 0.5F) {
+                    dh.vrSettings.worldRotation -= dh.vrSettings.worldRotationIncrement * signum(f5);
+                    dh.vrSettings.worldRotation %= 360.0F;
                 }
             }
 
-            if (this.dh.vrSettings.worldRotationIncrement == 0.0F) {
-                float f6 = VivecraftMovementInput.getMovementAxisValue(mod.keyRotateLeft);
+            if (dh.vrSettings.worldRotationIncrement == 0.0F) {
+                float f6 = VivecraftMovementInput.getMovementAxisValue(VivecraftVRMod.keyRotateLeft);
 
                 if (f6 > 0.0F) {
                     float f9 = 5.0F;
@@ -867,16 +722,16 @@ public abstract class MCVR {
                         f9 = 10.0F * f6;
                     }
 
-                    this.dh.vrSettings.worldRotation += f9;
-                    this.dh.vrSettings.worldRotation %= 360.0F;
+                    dh.vrSettings.worldRotation += f9;
+                    dh.vrSettings.worldRotation %= 360.0F;
                 }
-            } else if (mod.keyRotateLeft.consumeClick()) {
-                this.dh.vrSettings.worldRotation += this.dh.vrSettings.worldRotationIncrement;
-                this.dh.vrSettings.worldRotation %= 360.0F;
+            } else if (VivecraftVRMod.keyRotateLeft.consumeClick()) {
+                dh.vrSettings.worldRotation += dh.vrSettings.worldRotationIncrement;
+                dh.vrSettings.worldRotation %= 360.0F;
             }
 
-            if (this.dh.vrSettings.worldRotationIncrement == 0.0F) {
-                float f7 = VivecraftMovementInput.getMovementAxisValue(mod.keyRotateRight);
+            if (dh.vrSettings.worldRotationIncrement == 0.0F) {
+                float f7 = VivecraftMovementInput.getMovementAxisValue(VivecraftVRMod.keyRotateRight);
 
                 if (f7 > 0.0F) {
                     float f10 = 5.0F;
@@ -885,234 +740,225 @@ public abstract class MCVR {
                         f10 = 10.0F * f7;
                     }
 
-                    this.dh.vrSettings.worldRotation -= f10;
-                    this.dh.vrSettings.worldRotation %= 360.0F;
+                    dh.vrSettings.worldRotation -= f10;
+                    dh.vrSettings.worldRotation %= 360.0F;
                 }
-            } else if (mod.keyRotateRight.consumeClick()) {
-                this.dh.vrSettings.worldRotation -= this.dh.vrSettings.worldRotationIncrement;
-                this.dh.vrSettings.worldRotation %= 360.0F;
+            } else if (VivecraftVRMod.keyRotateRight.consumeClick()) {
+                dh.vrSettings.worldRotation -= dh.vrSettings.worldRotationIncrement;
+                dh.vrSettings.worldRotation %= 360.0F;
             }
 
-            this.seatedRot = this.dh.vrSettings.worldRotation;
+            this.seatedRot = dh.vrSettings.worldRotation;
 
-            if (mod.keyRadialMenu.consumeClick() && !flag1) {
-                ControllerType controllertype1 = this.findActiveBindingControllerType(mod.keyRadialMenu);
+            if (VivecraftVRMod.keyRadialMenu.consumeClick() && !gui) {
+                ControllerType controller = this.findActiveBindingControllerType(VivecraftVRMod.keyRadialMenu);
 
-                if (controllertype1 != null) {
-                    RadialHandler.setOverlayShowing(!RadialHandler.isShowing(), controllertype1);
+                if (controller != null) {
+                    RadialHandler.setOverlayShowing(!RadialHandler.isShowing(), controller);
                 }
             }
 
-            if (mod.keySwapMirrorView.consumeClick()) {
-                if (this.dh.vrSettings.displayMirrorMode == VRSettings.MirrorMode.THIRD_PERSON) {
-                    this.dh.vrSettings.displayMirrorMode = VRSettings.MirrorMode.FIRST_PERSON;
-                } else if (this.dh.vrSettings.displayMirrorMode == VRSettings.MirrorMode.FIRST_PERSON) {
-                    this.dh.vrSettings.displayMirrorMode = VRSettings.MirrorMode.THIRD_PERSON;
+            if (VivecraftVRMod.keySwapMirrorView.consumeClick()) {
+                if (dh.vrSettings.displayMirrorMode == MirrorMode.THIRD_PERSON) {
+                    dh.vrSettings.displayMirrorMode = MirrorMode.FIRST_PERSON;
+                } else if (dh.vrSettings.displayMirrorMode == MirrorMode.FIRST_PERSON) {
+                    dh.vrSettings.displayMirrorMode = MirrorMode.THIRD_PERSON;
                 }
 
                 if (!ShadersHelper.isShaderActive()) {
-                    this.dh.vrRenderer.reinitFrameBuffers("Mirror Setting Changed");
+                    dh.vrRenderer.reinitFrameBuffers("Mirror Setting Changed");
                 } else {
                     // in case if the last third person mirror was mixed reality
-                    this.dh.vrRenderer.resizeFrameBuffers("Mirror Setting Changed");
+                    dh.vrRenderer.resizeFrameBuffers("Mirror Setting Changed");
                 }
             }
 
-            if (mod.keyToggleKeyboard.consumeClick()) {
-                KeyboardHandler.setOverlayShowing(!KeyboardHandler.Showing);
+            if (VivecraftVRMod.keyToggleKeyboard.consumeClick()) {
+                KeyboardHandler.setOverlayShowing(!KeyboardHandler.isShowing());
             }
 
-            if (mod.keyMoveThirdPersonCam.consumeClick() && !ClientDataHolderVR.kiosk && !this.dh.vrSettings.seated && (this.dh.vrSettings.displayMirrorMode == VRSettings.MirrorMode.MIXED_REALITY || this.dh.vrSettings.displayMirrorMode == VRSettings.MirrorMode.THIRD_PERSON)) {
-                ControllerType controllertype2 = this.findActiveBindingControllerType(mod.keyMoveThirdPersonCam);
+            if (VivecraftVRMod.keyMoveThirdPersonCam.consumeClick() && !dh.kiosk && !dh.vrSettings.seated && (dh.vrSettings.displayMirrorMode == MirrorMode.MIXED_REALITY || dh.vrSettings.displayMirrorMode == MirrorMode.THIRD_PERSON)) {
+                ControllerType controllertype2 = this.findActiveBindingControllerType(VivecraftVRMod.keyMoveThirdPersonCam);
 
                 if (controllertype2 != null) {
-                    VRHotkeys.startMovingThirdPersonCam(controllertype2.ordinal(), VRHotkeys.Triggerer.BINDING);
+                    VRHotkeys.startMovingThirdPersonCam(controllertype2.ordinal(), Triggerer.BINDING);
                 }
             }
 
-            if (!mod.keyMoveThirdPersonCam.isDown() && VRHotkeys.isMovingThirdPersonCam() && VRHotkeys.getMovingThirdPersonCamTriggerer() == VRHotkeys.Triggerer.BINDING) {
+            if (!VivecraftVRMod.keyMoveThirdPersonCam.isDown() && VRHotkeys.isMovingThirdPersonCam() && VRHotkeys.getMovingThirdPersonCamTriggerer() == Triggerer.BINDING) {
                 VRHotkeys.stopMovingThirdPersonCam();
-                this.dh.vrSettings.saveOptions();
+                dh.vrSettings.saveOptions();
             }
 
-            if (VRHotkeys.isMovingThirdPersonCam() && VRHotkeys.getMovingThirdPersonCamTriggerer() == VRHotkeys.Triggerer.MENUBUTTON && mod.keyMenuButton.consumeClick()) {
+            if (VRHotkeys.isMovingThirdPersonCam() && VRHotkeys.getMovingThirdPersonCamTriggerer() == Triggerer.MENUBUTTON && VivecraftVRMod.keyMenuButton.consumeClick()) {
                 VRHotkeys.stopMovingThirdPersonCam();
-                this.dh.vrSettings.saveOptions();
+                dh.vrSettings.saveOptions();
             }
 
-            if (KeyboardHandler.Showing && this.mc.screen == null && mod.keyMenuButton.consumeClick()) {
+            if (KeyboardHandler.isShowing() && mc.screen == null && VivecraftVRMod.keyMenuButton.consumeClick()) {
                 KeyboardHandler.setOverlayShowing(false);
             }
 
-            if (RadialHandler.isShowing() && mod.keyMenuButton.consumeClick()) {
+            if (RadialHandler.isShowing() && VivecraftVRMod.keyMenuButton.consumeClick()) {
                 RadialHandler.setOverlayShowing(false, (ControllerType) null);
             }
 
-            if (mod.keyMenuButton.consumeClick()) {
-                if (!flag1) {
-                    if (!ClientDataHolderVR.kiosk) {
-                        this.mc.pauseGame(false);
+            if (VivecraftVRMod.keyMenuButton.consumeClick()) {
+                if (!gui) {
+                    if (!dh.kiosk) {
+                        mc.pauseGame(false);
                     }
                 } else {
-                    InputSimulator.pressKey(256);
-                    InputSimulator.releaseKey(256);
+                    InputSimulator.pressKey(GLFW_KEY_ESCAPE);
+                    InputSimulator.releaseKey(GLFW_KEY_ESCAPE);
                 }
 
                 KeyboardHandler.setOverlayShowing(false);
             }
 
-            if (mod.keyTogglePlayerList.consumeClick()) {
-                ((GuiExtension) this.mc.gui).vivecraft$setShowPlayerList(!((GuiExtension) this.mc.gui).vivecraft$getShowPlayerList());
+            if (VivecraftVRMod.keyTogglePlayerList.consumeClick()) {
+                ((GuiExtension) mc.gui).vivecraft$setShowPlayerList(!((GuiExtension) mc.gui).vivecraft$getShowPlayerList());
             }
 
-            if (mod.keyToggleHandheldCam.consumeClick() && this.mc.player != null) {
-                this.dh.cameraTracker.toggleVisibility();
+            if (VivecraftVRMod.keyToggleHandheldCam.consumeClick() && mc.player != null) {
+                dh.cameraTracker.toggleVisibility();
 
-                if (this.dh.cameraTracker.isVisible()) {
-                    ControllerType controllertype3 = this.findActiveBindingControllerType(mod.keyToggleHandheldCam);
+                if (dh.cameraTracker.isVisible()) {
+                    ControllerType hand = this.findActiveBindingControllerType(VivecraftVRMod.keyToggleHandheldCam);
 
-                    if (controllertype3 == null) {
-                        controllertype3 = ControllerType.RIGHT;
+                    if (hand == null) {
+                        hand = ControllerType.RIGHT;
                     }
 
-                    VRData.VRDevicePose vrdata$vrdevicepose = this.dh.vrPlayer.vrdata_world_pre.getController(controllertype3.ordinal());
-                    this.dh.cameraTracker.setPosition(vrdata$vrdevicepose.getPosition());
-                    this.dh.cameraTracker.setRotation(new Quaternion(vrdata$vrdevicepose.getMatrix().transposed()));
+                    VRDevicePose vrdata$vrdevicepose = dh.vrPlayer.vrdata_world_pre.getController(hand.ordinal());
+                    dh.cameraTracker.setPosition(vrdata$vrdevicepose.getPosition());
+                    dh.cameraTracker.setRotation(new Quaternionf().setFromNormalized(vrdata$vrdevicepose.getMatrix()));
                 }
             }
 
-            if (mod.keyQuickHandheldCam.consumeClick() && this.mc.player != null) {
-                if (!this.dh.cameraTracker.isVisible()) {
-                    this.dh.cameraTracker.toggleVisibility();
+            if (VivecraftVRMod.keyQuickHandheldCam.consumeClick() && mc.player != null) {
+                if (!dh.cameraTracker.isVisible()) {
+                    dh.cameraTracker.toggleVisibility();
                 }
 
-                ControllerType controllertype4 = this.findActiveBindingControllerType(mod.keyQuickHandheldCam);
+                ControllerType hand = this.findActiveBindingControllerType(VivecraftVRMod.keyQuickHandheldCam);
 
-                if (controllertype4 == null) {
-                    controllertype4 = ControllerType.RIGHT;
+                if (hand == null) {
+                    hand = ControllerType.RIGHT;
                 }
 
-                VRData.VRDevicePose vrdata$vrdevicepose1 = this.dh.vrPlayer.vrdata_world_pre.getController(controllertype4.ordinal());
-                this.dh.cameraTracker.setPosition(vrdata$vrdevicepose1.getPosition());
-                this.dh.cameraTracker.setRotation(new Quaternion(vrdata$vrdevicepose1.getMatrix().transposed()));
-                this.dh.cameraTracker.startMoving(controllertype4.ordinal(), true);
+                VRDevicePose vrdata$vrdevicepose1 = dh.vrPlayer.vrdata_world_pre.getController(hand.ordinal());
+                dh.cameraTracker.setPosition(vrdata$vrdevicepose1.getPosition());
+                dh.cameraTracker.setRotation(new Quaternionf().setFromNormalized(vrdata$vrdevicepose1.getMatrix()));
+                dh.cameraTracker.startMoving(hand.ordinal(), true);
             }
 
-            if (!mod.keyQuickHandheldCam.isDown() && this.dh.cameraTracker.isMoving() && this.dh.cameraTracker.isQuickMode() && this.mc.player != null) {
-                this.dh.cameraTracker.stopMoving();
-                this.dh.grabScreenShot = true;
+            if (!VivecraftVRMod.keyQuickHandheldCam.isDown() && dh.cameraTracker.isMoving() && dh.cameraTracker.isQuickMode() && mc.player != null) {
+                dh.cameraTracker.stopMoving();
+                dh.grabScreenShot = true;
             }
 
             GuiHandler.processBindingsGui();
             RadialHandler.processBindings();
             KeyboardHandler.processBindings();
-            this.dh.interactTracker.processBindings();
+            dh.interactTracker.processBindings();
         }
     }
 
     public void populateInputActions() {
-        Map<String, ActionParams> map = this.getSpecialActionParams();
+        Map<String, ActionParams> actionParams = this.getSpecialActionParams();
 
         // iterate over all minecraft keys, and our hidden keys
-        for (KeyMapping keymapping : Stream.concat(Arrays.stream(this.mc.options.keyMappings), mod.getHiddenKeyBindings().stream()).toList()) {
-            ActionParams actionparams = map.getOrDefault(keymapping.getName(), new ActionParams("optional", "boolean", (VRInputActionSet) null));
-            VRInputAction vrinputaction = new VRInputAction(keymapping, actionparams.requirement, actionparams.type, actionparams.actionSetOverride);
-            this.inputActions.put(vrinputaction.name, vrinputaction);
+        for (KeyMapping keymapping : Stream.concat(Arrays.stream(mc.options.keyMappings), VivecraftVRMod.hiddenKeyBindingSet.stream()).toList()) {
+            ActionParams params = actionParams.getOrDefault(keymapping.getName(), new ActionParams("optional", "boolean", null));
+            VRInputAction action = new VRInputAction(keymapping, params.requirement, params.type, params.actionSetOverride);
+            this.inputActions.put(action.name, action);
         }
 
-        for (VRInputAction vrinputaction1 : this.inputActions.values()) {
-            this.inputActionsByKeyBinding.put(vrinputaction1.keyBinding.getName(), vrinputaction1);
+        for (VRInputAction action : this.inputActions.values()) {
+            this.inputActionsByKeyBinding.put(action.keyBinding.getName(), action);
         }
 
-        this.getInputAction(mod.keyVRInteract).setPriority(5).setEnabled(false);
-        this.getInputAction(mod.keyClimbeyGrab).setPriority(10).setEnabled(false);
-        this.getInputAction(mod.keyClimbeyJump).setEnabled(false);
+        this.getInputAction(VivecraftVRMod.keyVRInteract).setPriority(5).setEnabled(false);
+        this.getInputAction(VivecraftVRMod.keyClimbeyGrab).setPriority(10).setEnabled(false);
+        this.getInputAction(VivecraftVRMod.keyClimbeyJump).setEnabled(false);
         this.getInputAction(GuiHandler.keyKeyboardClick).setPriority(50);
         this.getInputAction(GuiHandler.keyKeyboardShift).setPriority(50);
     }
 
     public Map<String, ActionParams> getSpecialActionParams() {
         Map<String, ActionParams> map = new HashMap<>();
-        this.addActionParams(map, this.mc.options.keyUp, "optional", "vector1", (VRInputActionSet) null);
-        this.addActionParams(map, this.mc.options.keyDown, "optional", "vector1", (VRInputActionSet) null);
-        this.addActionParams(map, this.mc.options.keyLeft, "optional", "vector1", (VRInputActionSet) null);
-        this.addActionParams(map, this.mc.options.keyRight, "optional", "vector1", (VRInputActionSet) null);
-        this.addActionParams(map, this.mc.options.keyInventory, "suggested", "boolean", VRInputActionSet.GLOBAL);
-        this.addActionParams(map, this.mc.options.keyAttack, "suggested", "boolean", (VRInputActionSet) null);
-        this.addActionParams(map, this.mc.options.keyUse, "suggested", "boolean", (VRInputActionSet) null);
-        this.addActionParams(map, this.mc.options.keyChat, "optional", "boolean", VRInputActionSet.GLOBAL);
-        this.addActionParams(map, mod.keyHotbarScroll, "optional", "vector2", (VRInputActionSet) null);
-        this.addActionParams(map, mod.keyHotbarSwipeX, "optional", "vector2", (VRInputActionSet) null);
-        this.addActionParams(map, mod.keyHotbarSwipeY, "optional", "vector2", (VRInputActionSet) null);
-        this.addActionParams(map, mod.keyMenuButton, "suggested", "boolean", VRInputActionSet.GLOBAL);
-        this.addActionParams(map, mod.keyTeleportFallback, "suggested", "vector1", (VRInputActionSet) null);
-        this.addActionParams(map, mod.keyFreeMoveRotate, "optional", "vector2", (VRInputActionSet) null);
-        this.addActionParams(map, mod.keyFreeMoveStrafe, "optional", "vector2", (VRInputActionSet) null);
-        this.addActionParams(map, mod.keyRotateLeft, "optional", "vector1", (VRInputActionSet) null);
-        this.addActionParams(map, mod.keyRotateRight, "optional", "vector1", (VRInputActionSet) null);
-        this.addActionParams(map, mod.keyRotateAxis, "optional", "vector2", (VRInputActionSet) null);
-        this.addActionParams(map, mod.keyRadialMenu, "suggested", "boolean", (VRInputActionSet) null);
-        this.addActionParams(map, mod.keySwapMirrorView, "optional", "boolean", VRInputActionSet.GLOBAL);
-        this.addActionParams(map, mod.keyToggleKeyboard, "optional", "boolean", VRInputActionSet.GLOBAL);
-        this.addActionParams(map, mod.keyMoveThirdPersonCam, "optional", "boolean", VRInputActionSet.GLOBAL);
-        this.addActionParams(map, mod.keyToggleHandheldCam, "optional", "boolean", VRInputActionSet.GLOBAL);
-        this.addActionParams(map, mod.keyQuickHandheldCam, "optional", "boolean", VRInputActionSet.GLOBAL);
-        this.addActionParams(map, mod.keyTrackpadTouch, "optional", "boolean", VRInputActionSet.TECHNICAL);
-        this.addActionParams(map, mod.keyVRInteract, "suggested", "boolean", VRInputActionSet.CONTEXTUAL);
-        this.addActionParams(map, mod.keyClimbeyGrab, "suggested", "boolean", (VRInputActionSet) null);
-        this.addActionParams(map, mod.keyClimbeyJump, "suggested", "boolean", (VRInputActionSet) null);
-        this.addActionParams(map, GuiHandler.keyLeftClick, "suggested", "boolean", (VRInputActionSet) null);
-        this.addActionParams(map, GuiHandler.keyScrollAxis, "optional", "vector2", (VRInputActionSet) null);
-        this.addActionParams(map, GuiHandler.keyRightClick, "suggested", "boolean", (VRInputActionSet) null);
-        this.addActionParams(map, GuiHandler.keyShift, "suggested", "boolean", (VRInputActionSet) null);
-        this.addActionParams(map, GuiHandler.keyKeyboardClick, "suggested", "boolean", (VRInputActionSet) null);
-        this.addActionParams(map, GuiHandler.keyKeyboardShift, "suggested", "boolean", (VRInputActionSet) null);
-        File file1 = new File("customactionsets.txt");
+        this.addActionParams(map, mc.options.keyUp, "optional", "vector1", null);
+        this.addActionParams(map, mc.options.keyDown, "optional", "vector1", null);
+        this.addActionParams(map, mc.options.keyLeft, "optional", "vector1", null);
+        this.addActionParams(map, mc.options.keyRight, "optional", "vector1", null);
+        this.addActionParams(map, mc.options.keyInventory, "suggested", "boolean", VRInputActionSet.GLOBAL);
+        this.addActionParams(map, mc.options.keyAttack, "suggested", "boolean", null);
+        this.addActionParams(map, mc.options.keyUse, "suggested", "boolean", null);
+        this.addActionParams(map, mc.options.keyChat, "optional", "boolean", VRInputActionSet.GLOBAL);
+        this.addActionParams(map, VivecraftVRMod.keyHotbarScroll, "optional", "vector2", null);
+        this.addActionParams(map, VivecraftVRMod.keyHotbarSwipeX, "optional", "vector2", null);
+        this.addActionParams(map, VivecraftVRMod.keyHotbarSwipeY, "optional", "vector2", null);
+        this.addActionParams(map, VivecraftVRMod.keyMenuButton, "suggested", "boolean", VRInputActionSet.GLOBAL);
+        this.addActionParams(map, VivecraftVRMod.keyTeleportFallback, "suggested", "vector1", null);
+        this.addActionParams(map, VivecraftVRMod.keyFreeMoveRotate, "optional", "vector2", null);
+        this.addActionParams(map, VivecraftVRMod.keyFreeMoveStrafe, "optional", "vector2", null);
+        this.addActionParams(map, VivecraftVRMod.keyRotateLeft, "optional", "vector1", null);
+        this.addActionParams(map, VivecraftVRMod.keyRotateRight, "optional", "vector1", null);
+        this.addActionParams(map, VivecraftVRMod.keyRotateAxis, "optional", "vector2", null);
+        this.addActionParams(map, VivecraftVRMod.keyRadialMenu, "suggested", "boolean", null);
+        this.addActionParams(map, VivecraftVRMod.keySwapMirrorView, "optional", "boolean", VRInputActionSet.GLOBAL);
+        this.addActionParams(map, VivecraftVRMod.keyToggleKeyboard, "optional", "boolean", VRInputActionSet.GLOBAL);
+        this.addActionParams(map, VivecraftVRMod.keyMoveThirdPersonCam, "optional", "boolean", VRInputActionSet.GLOBAL);
+        this.addActionParams(map, VivecraftVRMod.keyToggleHandheldCam, "optional", "boolean", VRInputActionSet.GLOBAL);
+        this.addActionParams(map, VivecraftVRMod.keyQuickHandheldCam, "optional", "boolean", VRInputActionSet.GLOBAL);
+        this.addActionParams(map, VivecraftVRMod.keyTrackpadTouch, "optional", "boolean", VRInputActionSet.TECHNICAL);
+        this.addActionParams(map, VivecraftVRMod.keyVRInteract, "suggested", "boolean", VRInputActionSet.CONTEXTUAL);
+        this.addActionParams(map, VivecraftVRMod.keyClimbeyGrab, "suggested", "boolean", null);
+        this.addActionParams(map, VivecraftVRMod.keyClimbeyJump, "suggested", "boolean", null);
+        this.addActionParams(map, GuiHandler.keyLeftClick, "suggested", "boolean", null);
+        this.addActionParams(map, GuiHandler.keyScrollAxis, "optional", "vector2", null);
+        this.addActionParams(map, GuiHandler.keyRightClick, "suggested", "boolean", null);
+        this.addActionParams(map, GuiHandler.keyShift, "suggested", "boolean", null);
+        this.addActionParams(map, GuiHandler.keyKeyboardClick, "suggested", "boolean", null);
+        this.addActionParams(map, GuiHandler.keyKeyboardShift, "suggested", "boolean", null);
+        File file = new File("customactionsets.txt");
 
-        if (file1.exists()) {
-            System.out.println("Loading custom action set definitions...");
-            String s;
+        if (file.exists()) {
+            logger.info("Loading custom action set definitions...");
+            String line;
 
-            try (BufferedReader bufferedreader = new BufferedReader(new FileReader(file1))) {
-                while ((s = bufferedreader.readLine()) != null) {
-                    String[] astring = s.split(":", 2);
+            try (BufferedReader br = new BufferedReader(new FileReader(file))) {
+                while ((line = br.readLine()) != null) {
+                    String[] tokens = line.split(":", 2);
 
-                    if (astring.length < 2) {
-                        System.out.println("Invalid tokens: " + s);
+                    if (tokens.length < 2) {
+                        logger.warn("Invalid tokens: {}", line);
                     } else {
-                        KeyMapping keymapping = this.findKeyBinding(astring[0]);
+                        KeyMapping keymapping = this.findKeyBinding(tokens[0]);
 
                         if (keymapping == null) {
-                            System.out.println("Unknown key binding: " + astring[0]);
-                        } else if (mod.getAllKeyBindings().contains(keymapping)) {
-                            System.out.println("NO! Don't touch Vivecraft bindings!");
+                            logger.warn("Unknown key binding: {}", tokens[0]);
+                        } else if (VivecraftVRMod.allKeyBindingSet.contains(keymapping)) {
+                            logger.warn("NO! Don't touch Vivecraft bindings!");
                         } else {
-                            VRInputActionSet vrinputactionset = null;
-                            String s1 = astring[1].toLowerCase();
+                            VRInputActionSet actionSet = switch (tokens[1].toLowerCase()) {
+                                case "ingame" -> VRInputActionSet.INGAME;
+                                case "gui" -> VRInputActionSet.GUI;
+                                case "global" -> VRInputActionSet.GLOBAL;
+                                default -> null;
+                            };
 
-                            switch (s1) {
-                                case "ingame":
-                                    vrinputactionset = VRInputActionSet.INGAME;
-                                    break;
-
-                                case "gui":
-                                    vrinputactionset = VRInputActionSet.GUI;
-                                    break;
-
-                                case "global":
-                                    vrinputactionset = VRInputActionSet.GLOBAL;
-                            }
-
-                            if (vrinputactionset == null) {
-                                System.out.println("Unknown action set: " + astring[1]);
+                            if (actionSet == null) {
+                                logger.warn("Unknown action set: {}", tokens[1]);
                             } else {
-                                this.addActionParams(map, keymapping, "optional", "boolean", vrinputactionset);
+                                this.addActionParams(map, keymapping, "optional", "boolean", actionSet);
                             }
                         }
                     }
                 }
-            } catch (IOException ioexception) {
-                ioexception.printStackTrace();
+            } catch (IOException e) {
+                e.printStackTrace();
             }
         }
 
@@ -1120,25 +966,25 @@ public abstract class MCVR {
     }
 
     protected void changeHotbar(int dir) {
-        if (this.mc.player != null && (!this.dh.climbTracker.isGrabbingLadder() || !this.dh.climbTracker.isClaws(this.mc.player.getMainHandItem()))) {
-            if (this.mc.screen == null) {
+        if (mc.player != null && (!dh.climbTracker.isGrabbingLadder() || !dh.climbTracker.isClaws(mc.player.getMainHandItem()))) {
+            if (mc.screen == null) {
                 InputSimulator.scrollMouse(0.0D, (double) (dir * 4));
             } else {
-                this.mc.player.getInventory().swapPaint((double) dir);
+                mc.player.getInventory().swapPaint((double) dir);
             }
         }
     }
 
-    private void addActionParams(Map<String, ActionParams> map, KeyMapping keyBinding, String requirement, String type, VRInputActionSet actionSetOverride) {
+    private void addActionParams(Map<String, ActionParams> map, KeyMapping keymapping, String requirement, String type, @Nullable VRInputActionSet actionSetOverride) {
         ActionParams actionparams = new ActionParams(requirement, type, actionSetOverride);
-        map.put(keyBinding.getName(), actionparams);
+        map.put(keymapping.getName(), actionparams);
     }
 
-    protected abstract void triggerBindingHapticPulse(KeyMapping var1, int var2);
+    protected abstract void triggerBindingHapticPulse(KeyMapping binding, int duration);
 
-    protected abstract ControllerType findActiveBindingControllerType(KeyMapping var1);
+    protected abstract ControllerType findActiveBindingControllerType(KeyMapping binding);
 
-    public abstract void poll(long var1);
+    public abstract void poll(long frameIndex);
 
     public abstract Vector2f getPlayAreaSize();
 
@@ -1146,11 +992,13 @@ public abstract class MCVR {
 
     public abstract boolean postinit() throws RenderConfigException;
 
-    public abstract org.vivecraft.common.utils.math.Matrix4f getControllerComponentTransform(int var1, String var2);
+    public abstract Matrix4f getControllerComponentTransform(int controllerIndex, String componentName);
+
+    public abstract ControllerType getOriginControllerType(long inputValueHandle);
 
     public abstract boolean hasThirdController();
 
-    public abstract List<Long> getOrigins(VRInputAction var1);
+    public abstract List<Long> getOrigins(VRInputAction action);
 
     public abstract String getOriginName(long l);
 
